--- a/src/TutorialBasic1/Plugin/Core/Homepage/Tpl/MainLayout.tpl.html
+++ b/src/TutorialBasic1/Plugin/Core/Homepage/Tpl/MainLayout.tpl.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title go-bind="title">Title</title>
 </head>
 <body>
+
+    <h1 go-bind="title"></h1>
 
 </body>
 </html>
